<resources>
    <string name="app_name">myassayment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_with_client_services">chat with client services</string>
    <string name="the_support_team_is_happy_to_answer_any_questions_or_complaints">The support team is happy to answer any questions or complaints</string>
    <string name="our_doctors_are_ready_to_talk_to_you_about_any_medical_problem">Our doctors are ready to talk to you about any medical problem</string>
    <string name="get_help">get help</string>
    <string name="ask_doctor">ask doctor</string>
    <string name="booking_date_with_doctor">Booking date with doctor</string>
    <string name="latest_services">Latest Services</string>
    <string name="best_doctors">Best Doctors</string>
    <string name="book_now">book now</string>
    <string name="avilable_on">Avilable On</string>
    <string name="select_date">Select Appointement Date</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="fees">Fees</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in">Log In</string>
    <string name="forget_password">Forget Password</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="new_to_se7ty">New to se7ty</string>
    <string name="create_an_account">Create an Account</string>
    <string name="success_booking_date">Success Booking Date</string>
    <string name="search_speciallity">Search Speciallity</string>
    <string name="diet_and_nutriation">Diet and Nutriation</string>
    <string name="pediatrics">Pediatrics</string>
    <string name="andrology">Andrology</string>
    <string name="psychiatry">Psychiatry</string>
    <string name="book_an_appointement">Book an Appointement</string>
    <string name="avalible_from">Avalible from</string>
    <string name="search_doctor">Search Doctor</string>
    <string name="enter_your_name">enter your name</string>
    <string name="your_name">your Name</string>
    <string name="your_email">your Email</string>
    <string name="enter_title_of_subject">Enter Title of Subject</string>
    <string name="title_of_subject">Title of Subject</string>
    <string name="enter_your_massage">Enter your Massage</string>
    <string name="your_massage">your Massage</string>
    <string name="leave_a_massage">Leave a Massage</string>
    <string name="you_car_leave_your_massage_here">you car leave your massage here</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="sing_up">Sing Up</string>
    <string name="i_agree_to_se7ty">I agree to se7ty</string>
    <string name="terms_and_conditions">terms and conditions</string>
    <string name="find_my_password">Find My Password</string>
    <string name="finish_setting_up_your_account">Finish setting Up your account</string>
    <string name="my_electronic_medical_record">My Electronic Medical Record</string>
    <string name="log_out">Log Out</string>
    <string name="app_setting">App Setting</string>
    <string name="call_coustomer_support">CAll Coustomer Support</string>
    <string name="privacy_police">Privacy Police</string>
    <string name="terms_or_seveices">Terms Or Seveices</string>
    <string name="your_first_consutation_is_one_click_away">Your first Consutation is one click away!</string>
    <string name="we_re_here_for_you">We\'re here for you support if you are experience a services medical situation, book your doctor know</string>
    <string name="previous_or_cancelling_booking">Previous or Cancelling Booking</string>
    <string name="lab_tests">Lab Tests</string>
    <string name="find_all_of_the_medical">find all of the medical lab tests that your  physician prescribe at our partner labs</string>
    <string name="covid_19_tests">COVID-19 Tests</string>
    <string name="all_of_the_medical_lab_tests_that_you_need_to">All of the medical lab tests that you need to dignose or follow Up on COVID-19 prognoise</string>
    <string name="need_general_help">Need General Help</string>
    <string name="if_you_need_assistance_in_any_issue">if you need assistance in any issue, our customer services team is always ready to help</string>
    <string name="previous_booking">Previous Booking</string>
    <string name="emergency">Emergency</string>
    <string name="please_wait_your_are_begain_connected">Please Wait, your are begain connected to an Emergency doctor</string>
    <string name="position_in_queue">Position in Queue</string>
    <string name="cancle">Cancle</string>
    <string name="cancle_emergency_request">Cancle Emergency Request!</string>
    <string name="are_you_sure_that_you_want_to_cancle_your_emergency_request">Are you sure that you want to cancle your Emergency Request</string>
    <string name="cancle_request">Cancle Request</string>
    <string name="keep_iin_queue">Keep iin queue</string>
    <string name="my_up_comming_booking">My Up Comming Booking</string>
    <string name="payment_status">Payment Status</string>
    <string name="booking_date">Booking Date</string>
    <string name="fawry_refrence_code">fawry refrence code</string>
    <string name="copy_code">Copy code</string>
    <string name="doctor_biography">Doctor Biography</string>
    <string name="payment">Payment</string>
    <string name="are_you_sure_that_you_went_to_cancle_your_boking">Are you sure that you went to cancle your boking</string>
    <string name="keep_booking">Keep Booking</string>
    <string name="cancle_booking">Cancle Booking</string>
    <string name="full_name">Full Name</string>
    <string name="data_of_brith">Data Of brith</string>
    <string name="select_date_of_brith">Select Date Of brith</string>
    <string name="country">Country</string>
    <string name="select_your_country">Select your Country</string>
    <string name="city">City</string>
    <string name="select_your_city">Select Your City</string>

    <string name="age">Age</string>
    <string name="enter_your_age">enter your Age</string>
    <string name="gendre">Gendre</string>
    <string name="select_your_gendre">Select Your gendre</string>
    <string name="this_informaition_will_be_shared">this informaition will be shared with every doctors you deal with him </string>
    <string name="email_for_contact">Email For Contact</string>
    <string name="phone_number_for_contact">Phone Number for Contact</string>
    <string name="diseases_you_suffer_from">diseases you suffer from</string>
    <string name="enter_here">Enter Here</string>
    <string name="your_position">your position</string>
    <string name="select_gender">Select Gender</string>
    <string name="pick_up_position">pick Up Position</string>
    <string name="nears_doctors">Nears Doctors</string>

    <string name="lap_tests">Lap Tests</string>
    <string name="search_for_tests">Search for tests</string>
    <string name="which_tests_you_are_searching_for">Which tests you are searching for ?</string>
    <string name="add_more_details_about_your_lap_test_analysis">Add More details about your lap test analysis</string>
    <string name="our_agent_will_call_you_shortly_fro_your">Our agent will call you shortly fro your home visite time and date</string>
    <string name="my_self">My Self</string>
    <string name="others">Others</string>
    <string name="patient_name">Patient Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="add_mobile_number">Add mobile Number</string>
    <string name="add_patient_name">Add Patient Name</string>
    <string name="chose_test_location">Chose Test Location</string>
    <string name="at_home">At Home</string>
    <string name="at_branch">At branch</string>
    <string name="chose_city">Chose City</string>
    <string name="chose_area">Chose Area</string>
    <string name="patient_address">Patient Address</string>
    <string name="add_patient_address">Add Patient Address</string>
    <string name="my_upcomming_booking">My Upcomming Booking</string>
    <string name="no_branches_found">No Branches Found</string>
    <string name="my_electrical_medical_record">My Electrical Medical Record</string>
    <string name="height_in_cm">Height (in cm)</string>
    <string name="weight_in_kg">Weight (in kg)</string>
    <string name="blod_type_optinal">Blod Type(optinal)</string>
    <string name="material_status">Material Status</string>
    <string name="do_you_drink_alchol">Do You Drink Alchol ?</string>
    <string name="are_you_smoker">Are You Smoker ?</string>
    <string name="save">Save</string>
    <string name="medication">Medication</string>
    <string name="prescription">Prescription</string>
    <string name="personal_info">Personal Info</string>
    <string name="medical_test">Medical Test</string>
    <string name="my_medical_test">My Medical Test</string>
    <string name="you_currently_have_no_medication">You currently have no Medication</string>
    <string name="add_medication">Add Medication</string>
    <string name="add_medical_test">Add Medical Test</string>
    <string name="test_name">Test Name</string>
    
    <string name="test_date">Test Date</string>
    <string name="result">Result</string>
    <string name="add_the_test_result">Add the test Result</string>
    <string name="please_select_date">Please Select date</string>
    <string name="lap_name">Lap Name</string>
    <string name="my_test_result">My Test Result</string>
    <string name="view_attachment">View Attachment</string>
    <string name="edit">Edit</string>
    <string name="delete_test">Delete Test</string>
    <string name="attachment">Attachment</string>
    <string name="chronic_drug">Chronic drug</string>
    <string name="enter_medication_name">Enter Medication Name</string>
    <string name="enter_additional_notes">Enter Additional Notes</string>
    <string name="medication_name">Medication Name</string>
    <string name="change_language">Change Language</string>
    <string name="english">English</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="change_my_password">Change My Password</string>
    <string name="setting">Setting</string>
    <string name="my_data">My Data</string>
    <string name="warning">Warning</string>

</resources>