<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.body.bottomcheat.GetHelpFragment">

    <ImageView
        android:id="@+id/btn_back_gethelp"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/background_tool" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_help"
        android:textColor="@color/background_tool"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btn_back_gethelp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_back_gethelp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/enter_your_name"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btn_back_gethelp"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <EditText
        android:id="@+id/et_name_gethelp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textView20"
        app:layout_constraintStart_toStartOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/enter_your_email"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/et_name_gethelp"
        app:layout_constraintStart_toStartOf="@+id/et_name_gethelp"
        app:layout_constraintTop_toBottomOf="@+id/et_name_gethelp" />

    <EditText
        android:id="@+id/et_email_gethelp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/your_email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textView21"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/enter_title_of_subject"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/et_email_gethelp"
        app:layout_constraintStart_toStartOf="@+id/et_email_gethelp"
        app:layout_constraintTop_toBottomOf="@+id/et_email_gethelp" />

    <EditText
        android:id="@+id/et_subject_gethelp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title_of_subject"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textView22"
        app:layout_constraintStart_toStartOf="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/enter_your_massage"
        app:layout_constraintEnd_toEndOf="@+id/et_subject_gethelp"
        app:layout_constraintStart_toStartOf="@+id/et_subject_gethelp"
        app:layout_constraintTop_toBottomOf="@+id/et_subject_gethelp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_massssage_gethelp"
        android:layout_width="0dp"
        android:layout_height="@dimen/_100sdp"
        android:gravity="top"
        android:hint="@string/your_massage"
        app:boxStrokeColor="@color/background_tool"
        android:inputType="textMultiLine"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@+id/textView23"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/textView23">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_massage_gethelp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:backgroundTint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_send_bottomcheat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/background_tool"
        android:text="@string/leave_a_massage"
        android:textStyle="bold"
        app:cornerRadius="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="@+id/et_massssage_gethelp"
        app:layout_constraintStart_toStartOf="@+id/et_massssage_gethelp"
        app:layout_constraintTop_toBottomOf="@+id/et_massssage_gethelp" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/you_car_leave_your_massage_here"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btn_back_gethelp"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <ProgressBar
        android:id="@+id/pb_gethelp"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/background_tool"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btn_send_bottomcheat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />
</androidx.constraintlayout.widget.ConstraintLayout>